Fix: socket 연결 중간에 끊김 수정중
